// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render a high depth differently than a depth of 3 1`] = `
<ForwardRef(Link)
  className="list-group-item depth-3"
  key="/bar"
  to="/documentation/bar"
>
  <h3
    className="list-group-item-heading"
  />
</ForwardRef(Link)>
`;

exports[`should render correctly 1`] = `
<ForwardRef(Link)
  className="list-group-item"
  key="/bar"
  to="/documentation/bar"
>
  <h3
    className="list-group-item-heading"
  />
</ForwardRef(Link)>
`;

exports[`should render correctly if the current node matches the splat 1`] = `
<ForwardRef(Link)
  className="list-group-item active"
  key="/bar"
  to="/documentation/bar"
>
  <h3
    className="list-group-item-heading"
  />
</ForwardRef(Link)>
`;
